Closed Bug 723217 Opened 12 years ago Closed 12 years ago

White boxes instead of plugin content after tapping to play

Categories

(Core Graveyard :: Plug-ins, defect)

ARM
Android
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla13

People

(Reporter: Margaret, Assigned: jaas)

References

Details

Attachments

(1 file)

I'm seeing this on: http://people.mozilla.org/~mwargers/tests/plugins/flash/flashembed.html.

I thought it was happening on all sites, but some sites partially work. On http://www.adobe.com/software/flash/about/ the top banner will play correctly, but the smaller element in the bottom right won't. Also, on http://www.dairyqueen.com, the "How do you DQ?" banner and the menu below will show up, but the content in the middle of the framed area doesn't appear.
Works for me with latest m-c now.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → WORKSFORME
Currently busted for me on m-c under Froyo, at least.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
(In reply to Margaret Leibovic [:margaret] from comment #1)
> Works for me with latest m-c now.

Ah, I'm dumb and installed the wrong APK. Yeah, still busted on Gingerbread :(
Regression from bug 90268?
To clarify, this is busted on all versions of Android. Not just Froyo.
Assignee: nobody → joshmoz
Blocks: 90268
Assignee: joshmoz → nobody
Component: General → Plug-ins
Product: Fennec Native → Core
QA Contact: general → plugins
Assignee: nobody → joshmoz
Attached patch fix v1.0Splinter Review
The first part of the fix is cutting off instantiation at a better place when the user has not clicked yet. The second part is letting stream data get delivered after instantiation. I couldn't resist cleaning up the click-to-play implementation to not pass its state variable all over the place.
Attachment #595888 - Flags: review?(snorp)
Comment on attachment 595888 [details] [diff] [review]
fix v1.0

Review of attachment 595888 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good to me
Attachment #595888 - Flags: review?(snorp) → review+
pushed to mozilla-inbound

http://hg.mozilla.org/integration/mozilla-inbound/rev/40c36f6068d6
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: --- → mozilla13
https://hg.mozilla.org/mozilla-central/rev/40c36f6068d6
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
I can still see this bug in Galaxy S 2, Android 2.3.4 and build 20120315
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
There appears to be a problem with full page plugins. This bug already has a patch that was committed, though, so I've opened a new bug for this, 736998.
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
Linkify Bug 736998
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: