Bug 723217: Fix click-to-play support for plugins on Android. r=snorp